Fix Overlapping UI on Blog Page Sidebar

--- a/antora-ui-camel/src/css/blog.css
+++ b/antora-ui-camel/src/css/blog.css
@@ -24,6 +24,8 @@
   list-style: none;
  
   padding: 0;
+  overflow-y: auto;
+  max-height: 990px;
   margin-top: 1rem;
   display: inline-block;
   max-height: 980px;
